--- a/app/views/bank_transactions/index.html.slim
+++ b/app/views/bank_transactions/index.html.slim
@@ -12,7 +12,7 @@
   = " | "
   = link_to t('bank_transactions.new.link'), [:new, :bank_transaction]
   = " | "
-  = link_to t('bank_transactions.excel.link'), [:excel, :bank_transactions]
+  = link_to t('bank_transactions.excel.link'), excel_bank_transactions_path(bank_account: params[:bank_account_id])
   = " | "
   = link_to t('common.title.back'), :bank_accounts
 
