--- a/app/views/bank_transactions/excel.html.slim
+++ b/app/views/bank_transactions/excel.html.slim
@@ -3,7 +3,7 @@
 
 h2= t("common.title.#{action_name}")
 
-= form_tag [:preview, bank_transaction], multipart: true, class: "tabular" do
+= form_tag preview_bank_transactions_path(bank_account: params[:bank_account]), multipart: true, class: "tabular" do
   .box
     p
       = label_tag :bank_account, t('.account')
