--- a/app/views/bank_transactions/preview.html.slim
+++ b/app/views/bank_transactions/preview.html.slim
@@ -1,5 +1,5 @@
 #show_command
-  = link_to t('common.title.back'), :bank_transactions
+  = link_to t('common.title.back'), bank_transactions_path(bank_account_id: params[:bank_account])
 
 h2= t(".title")
 
