--- a/app/views/contacts/index.html.slim
+++ b/app/views/contacts/index.html.slim
@@ -26,8 +26,8 @@ h2 Total : #{@contacts.count}
         td= address.company_name
         td= address.department
         td= address.position
-        td= address.emails.empty? ? "" : "(#{address.emails.first.target}) #{address.emails.first.email} "
-        td= address.phone_numbers.empty? ? "" : "(#{address.phone_numbers.first.target}) #{address.phone_numbers.first.number}"
+        td= address.emails.empty? ? "" : "#{address.emails.first.target_view} #{address.emails.first.email} "
+        td= address.phone_numbers.empty? ? "" : "#{address.phone_numbers.first.target_view} #{address.phone_numbers.first.number}"
   center
     = will_paginate @paginated
 - else
