--- a/app/views/contacts/_form.html.slim
+++ b/app/views/contacts/_form.html.slim
@@ -23,6 +23,10 @@ h2= t("common.title.#{action_name}")
       = f.text_field :position
     - if contact.owner?(current_user)
       p
+        = f.label :owner_id
+        = f.select :owner_id, options_from_collection_for_select(User.enabled, 'id', 'fullname', contact.owner_id)
+    - if contact.owner?(current_user)
+      p
         = f.label :isprivate
         = f.check_box :isprivate
 
