--- a/app/views/users/login.html.erb
+++ b/app/views/users/login.html.erb
@@ -17,5 +17,10 @@
 </div>
 
 <div class='login-link' style="text-align: center;">
-  <h4><%= link_to "or login with Google", '/auth/google' %></h4>
+  <h4>
+    or login with
+    <%= link_to "Google", '/auth/google' %>,
+    <%= link_to "Daum", '/auth/daum' %>,
+    <%= link_to "Nate", '/auth/nate' %>
+  </h4>
 </div>
