--- a/app/views/companies/show.html.slim
+++ b/app/views/companies/show.html.slim
@@ -7,49 +7,64 @@ h2 회사 정보
 
 .box
   #descr
-    table
-      tr
-        th= company.class.human_attribute_name(:name)
-        td= company.name
-      tr
-        th= company.class.human_attribute_name(:registration_number)
-        td= company.registration_number
-      tr
-        th= company.class.human_attribute_name(:owner_name)
-        td= company.owner_name
-      tr
-        th= company.class.human_attribute_name(:address)
-        td= company.address
-      tr
-        th= company.class.human_attribute_name(:phone_number)
-        td= company.phone_number
-      tr
-        th= company.class.human_attribute_name(:pay_basic_date)
-        td= company.pay_basic_date
-      tr
-        th= company.class.human_attribute_name(:payday)
-        td= company.payday
-      tr
-        th= company.class.human_attribute_name(:google_apps_domain)
-        td= company.google_apps_domain
-      tr
-        th= company.class.human_attribute_name(:google_apps_username)
-        td= company.google_apps_username
-      tr
-        th= company.class.human_attribute_name(:google_apps_password)
-        td= company.google_apps_password
-      tr
-        th= company.class.human_attribute_name(:redmine_domain)
-        td= company.redmine_domain
-      tr
-        th= company.class.human_attribute_name(:redmine_username)
-        td= company.redmine_username
-      tr
-        th= company.class.human_attribute_name(:redmine_password)
-        td= company.redmine_password
-      tr
-        th= company.class.human_attribute_name(:default_password)
-        td= company.default_password
+    = dtdd company, "name"
+    = dtdd company, "registration_number"
+    = dtdd company, "owner_name"
+    = dtdd company, "address"
+    = dtdd company, "phone_number"
+    = dtdd company, "pay_basic_date"
+    = dtdd company, "payday"
+    = dtdd company, "google_apps_domain"
+    = dtdd company, "google_apps_username"
+    = dtdd company, "google_apps_password"
+    = dtdd company, "redmine_domain"
+    = dtdd company, "redmine_username"
+    = dtdd company, "redmine_password"
+    = dtdd company, "default_password"
+    
+    / table
+    /   tr
+    /     th= company.class.human_attribute_name(:name)
+    /     td= company.name
+    /   tr
+    /     th= company.class.human_attribute_name(:registration_number)
+    /     td= company.registration_number
+    /   tr
+    /     th= company.class.human_attribute_name(:owner_name)
+    /     td= company.owner_name
+    /   tr
+    /     th= company.class.human_attribute_name(:address)
+    /     td= company.address
+    /   tr
+    /     th= company.class.human_attribute_name(:phone_number)
+    /     td= company.phone_number
+    /   tr
+    /     th= company.class.human_attribute_name(:pay_basic_date)
+    /     td= company.pay_basic_date
+    /   tr
+    /     th= company.class.human_attribute_name(:payday)
+    /     td= company.payday
+    /   tr
+    /     th= company.class.human_attribute_name(:google_apps_domain)
+    /     td= company.google_apps_domain
+    /   tr
+    /     th= company.class.human_attribute_name(:google_apps_username)
+    /     td= company.google_apps_username
+    /   tr
+    /     th= company.class.human_attribute_name(:google_apps_password)
+    /     td= company.google_apps_password
+    /   tr
+    /     th= company.class.human_attribute_name(:redmine_domain)
+    /     td= company.redmine_domain
+    /   tr
+    /     th= company.class.human_attribute_name(:redmine_username)
+    /     td= company.redmine_username
+    /   tr
+    /     th= company.class.human_attribute_name(:redmine_password)
+    /     td= company.redmine_password
+    /   tr
+    /     th= company.class.human_attribute_name(:default_password)
+    /     td= company.default_password
 
   = render "shared/attachments/detail", :target => company
 br
