fix javascript bug

--- a/app/views/contacts/form/_phone_number.html.slim
+++ b/app/views/contacts/form/_phone_number.html.slim
@@ -19,7 +19,7 @@ br
 javascript:
   (function(){
     $('.phone-number-form').each(function(index){
-      if($(this).find("input[type='text']").val() == "") {
+      if($(this).find("input[type='tel']").val() == "") {
         $(this).hide();
       }
     });
