--- a/app/views/hrinfos/show.html.erb
+++ b/app/views/hrinfos/show.html.erb
@@ -77,7 +77,12 @@
   <%= render 'changelog', target: @hrinfo %>
 <% end %>
     </div>
+  <% if @hrinfo.not_joined? %>
+    <%= render 'reports/info', target: @hrinfo %>
+  <% end %>
 </div>
+
+
 
 <!-- <pre>
   required_documents:
