--- a/app/views/applies/new.html.slim
+++ b/app/views/applies/new.html.slim
@@ -16,15 +16,14 @@
       p
         = hrinfo_form.label :juminno
         = hrinfo_form.text_field :juminno
-
+      p
+        = hrinfo_form.label :lastname
+        = hrinfo_form.text_field :lastname
+      p
+        = hrinfo_form.label :firstname
+        = hrinfo_form.text_field :firstname
       - contact = @this_user.hrinfo.contact
       = hrinfo_form.fields_for :contact do |f|
-        p
-          = f.label :lastname
-          = f.text_field :lastname
-        p
-          = f.label :firstname
-          = f.text_field :firstname
         = render 'contacts/form/address', contact_form: f, contact: contact
         = render 'contacts/form/email', contact_form: f, contact: contact
         = render 'contacts/form/phone_number', contact_form: f, contact: contact
