should modify applied resource

--- a/app/views/applies/_form.html.slim
+++ b/app/views/applies/_form.html.slim
@@ -28,4 +28,4 @@
         = render 'contacts/form/email', contact_form: f, contact: contact
         = render 'contacts/form/phone_number', contact_form: f, contact: contact
         = render 'contacts/form/others', contact_form: f, contact: contact
-    = f.submit  
+    = f.submit "입사 신청하기"
