--- a/app/views/applies/show.html.slim
+++ b/app/views/applies/show.html.slim
@@ -1,3 +1,6 @@
+#show_command
+  = link_to t('common.link.edit'), [:edit, :apply]
+
 h3 입사지원서
 
 - hrinfo = @this_user.hrinfo
@@ -24,3 +27,5 @@ dl
   - contact.others.each do |other|
     dt= other.class.human_attribute_name(:description)
     dd= other.target_view + " " + other.description
+
+= render 'reports/info', target: @this_user.hrinfo, reporter_list: [Company.current_company.apply_admin]
