--- a/app/views/contacts/index.html.slim
+++ b/app/views/contacts/index.html.slim
@@ -5,6 +5,10 @@
     = text_field_tag 'query', params[:query]
 
 #show_command
+  = link_to t('contacts.save.link'), [:save, :contacts]
+  = " | "
+  = link_to t('contacts.load.link'), [:load, :contacts]
+  = " | "
   = link_to t('contacts.new.link'), [:new, :contact]
   = " | "
   = link_to t('common.title.back'), :root
