--- a/app/views/pettycashes/new.html.slim
+++ b/app/views/pettycashes/new.html.slim
@@ -8,7 +8,7 @@ h2
 = form_for(@pettycash, :html => { :multipart => true } ) do |f|
 	= f.error_messages
 
-	#box
+	.box
 		p
 			= f.label :transdate, Pettycash.human_attribute_name('transdate')
 			= f.datetime_select :transdate, :order => [:year, :month, :day]
