--- a/app/views/reports/_info.html.slim
+++ b/app/views/reports/_info.html.slim
@@ -1,7 +1,5 @@
 - target.create_if_no_report
 - report = target.report
-/ - reporters = respond_to?(:reporters) || User.all.delete_if{|user| user == current_user or user.disabled?}
-- reporter_list ||= User.all.delete_if{|user| user == current_user or user.disabled?}
 
 h3 결제
 p= "상태 - #{report.localize_status}"
@@ -13,7 +11,7 @@ p= "상태 - #{report.localize_status}"
       = hidden_field_tag :target_id, target.id
       p
         = label_tag :reporter, t('activerecord.attributes.report.reporter')
-        = select_tag :reporter, options_for_select(reporter_list.map{|user| [user.fullname, user.id]}, (report.reporter.id if report.reporter))
+        = select_tag :reporter, options_for_select(User.all.delete_if{|user| user == current_user or user.disabled?}.map{|user| [user.fullname, user.id]}, (report.reporter.id if report.reporter))
       p
         = label_tag :comment, t('activerecord.attributes.report.comment')
         = text_field_tag :comment
