--- a/app/views/projects/_expense.html.slim
+++ b/app/views/projects/_expense.html.slim
@@ -1,22 +1,33 @@
-h3 지출내역
+h3= t('projects.expense.expenditures')
+
 table
   - if project.started_on
     - project.started_on.step(project.ending_on, 1.month) do |date|
       - reports = project.expense_reports.where(expensed_at: date.to_time.all_month)
       tr
-        th= date.strftime("%Y.%_m")
-        th 내역
-        th 금액
+        th
+        	= date.strftime("%Y.%_m")
+        th
+        	= t('projects.expense.history')
+        th
+        	= t('projects.expense.amount')
         - reports.each_with_index do |report|
           tr
-            td= report.expensed_at.strftime("%_m.%d")
-            td= report.description
-            td= number_to_currency report.amount
+            td
+            	= report.expensed_at.strftime("%_m.%d")
+            td
+            	= report.description
+            td
+            	= number_to_currency report.amount
         tr
-          td 월별 총합
           td
-          td = number_to_currency reports.total_amount
+          	= t('projects.expense.monthly_sum')
+          td
+          td 
+          	= number_to_currency reports.total_amount
     tr
-      td 전체 총합
       td
-      td = number_to_currency project.expense_reports.total_amount
+      	= t('projects.expense.overall_total')
+      td
+      td 
+      	= number_to_currency project.expense_reports.total_amount
