Revert "countinue erb -> slim and remove hangul text"
This reverts commit 86b1b212c4a8894a7a5919095e32f87e4e9f4c8a.

--- a/app/views/postings/_form.html.slim
+++ b/app/views/postings/_form.html.slim
@@ -14,11 +14,11 @@ h2= t("common.title.#{action_name}")
       = f.label :description
       = f.text_field :description
 
-    h3= t('postings.form.list')
+    h3 항목
     #posting-item-form
       #debit-form
-        = render 'posting_items/form', form: f, posting_items: @posting.items, type: t('postings.form.debit')
+        = render 'posting_items/form', form: f, posting_items: @posting.items, type: "차변"
       #credit-form
-        = render 'posting_items/form', form: f, posting_items: @posting.items, type: t('postings.form.credit')
+        = render 'posting_items/form', form: f, posting_items: @posting.items, type: "대변"
     p
       = f.submit
