--- a/app/views/expense_reports/show.html.slim
+++ b/app/views/expense_reports/show.html.slim
@@ -5,7 +5,7 @@
     - else
       = link_to t("postings.new.link"), new_posting_path(report: expense_report)
     = " | "
-  = link_to t("activerecord.models.#{expense_report.target_type.tableize.singularize}") + t('expense_reports.show.view'), expense_report.target
+  = link_to t("activerecord.models.#{expense_report.target_type.tableize.singularize}") + " 보기", expense_report.target
   = " | "
   - unless expense_report.posting
     = link_to t('common.link.edit'), [:edit, expense_report]
@@ -14,8 +14,7 @@
     = " | "
   = link_to t('common.title.back'), :expense_reports
 
-h2
-	= t('expense_reports.show.detail_expense_reports')
+h2 지출내역서 상세정보
 
 .box
   #descr
