--- a/app/views/taxbill_items/_form.html.erb
+++ b/app/views/taxbill_items/_form.html.erb
@@ -67,6 +67,8 @@
 
       quantity.keyup(applyTotal);
       quantity.keyup(applyTax);
+
+      $('#taxbill_item_unitprice').maskMoney();
     });
   </script>
 <% end -%>
