--- a/app/views/expense_reports/show.html.slim
+++ b/app/views/expense_reports/show.html.slim
@@ -27,7 +27,7 @@ h2 지출내역서 상세정보
         td= t("activerecord.models.#{expense_report.target_type.tableize.singularize}")
       tr
         th= expense_report.class.human_attribute_name(:project)
-        td= expense_report.project.name
+        td= expense_report.project.name rescue ""
       tr
         th= expense_report.class.human_attribute_name(:description)
         td= expense_report.description
