--- a/app/views/bank_transactions/excel.html.slim
+++ b/app/views/bank_transactions/excel.html.slim
@@ -12,4 +12,4 @@ h2= t("common.title.#{action_name}")
       = label_tag :file, t('.file')
       = file_field :upload, :file
     p
-      = submit_tag "미리보기"
+      = submit_tag t('bank_transactions.excel.submit')
