--- a/app/views/bank_transactions/preview.html.slim
+++ b/app/views/bank_transactions/preview.html.slim
@@ -16,5 +16,6 @@ h2= t(".title")
 
   br
 
-h3 프리뷰
+h3
+  = t('bank_transactions.preview.preview')
 = render 'list', bank_transactions: @transactions
