--- a/app/views/contacts/_item.html.slim
+++ b/app/views/contacts/_item.html.slim
@@ -18,33 +18,39 @@ table
     td
   - contact.emails.each do |email|
     tr
-      th= "이메일#{email.target_view}"
+      th
+        = t('contacts.item.email')
+        = "#{email.target_view}"
       td= email.email
       - if menu && contact.edit?(current_user)
         td
           = link_to t('common.link.edit'), [:edit, contact]
           = " | "
-          = link_to "제거", [contact, email], :method => :delete, :confirm => "Are you sure?"
+          = link_to t('contacts.item.remove'), [contact, email], :method => :delete, :confirm => "Are you sure?"
 
   - contact.phone_numbers.each do |phone_number|
     tr
-      th= "전화번호#{phone_number.target_view}"
+      th
+        = t('contacts.item.phonenumber')
+        = "#{phone_number.target_view}"
       td= phone_number.number
       - if menu && contact.edit?(current_user)
         td
           = link_to t('common.link.edit'), [:edit, contact]
           = " | "
-          = link_to "제거", [contact, phone_number], :method => :delete, :confirm => "Are you sure?"
+          = link_to t('contacts.item.remove'), [contact, phone_number], :method => :delete, :confirm => "Are you sure?"
 
   - contact.addresses.each do |address|
     tr
-      th= "주소#{address.target_view}"
+      th
+        = t('contacts.item.address')
+        = "#{address.target_view}"
       td = "#{address.country} #{address.province} #{address.city} #{address.other1} #{address.other2} #{address.postal_code}"
       - if menu && contact.edit?(current_user)
         td
           = link_to t('common.link.edit'), [:edit, contact]
           = " | "
-          = link_to "제거", [contact, address], :method => :delete, :confirm => "Are you sure?"
+          = link_to t('contacts.item.remove'), [contact, address], :method => :delete, :confirm => "Are you sure?"
 
   - contact.others.each do |other|
     tr
@@ -54,7 +60,7 @@ table
         td
           = link_to t('common.link.edit'), [:edit, contact]
           = " | "
-          = link_to "제거", [contact, other], :method => :delete, :confirm => "Are you sure?"
+          = link_to t('contacts.item.remove'), [contact, other], :method => :delete, :confirm => "Are you sure?"
   tr
     th= Document.human_attribute_name("tags")
     td= contact.tag_list
