--- a/app/views/accessors/_search_form.html.slim
+++ b/app/views/accessors/_search_form.html.slim
@@ -1,2 +1,2 @@
 - if current_user.ingroup?(:admin)
-  = select_tag :empty_permission, options_for_select([["전체 보기", false], ["권한을 알 수 없는 내역 보기", true]], params[:empty_permission]), "onchange" => "this.form.submit()"
+  = select_tag :empty_permission, options_for_select([[t('accessors.search.all_view'), false], [t('accessors.search.view__unknown_permissions'), true]], params[:empty_permission]), "onchange" => "this.form.submit()"
