--- a/app/views/applies/show.html.slim
+++ b/app/views/applies/show.html.slim
@@ -1,7 +1,8 @@
 #show_command
   = link_to t('common.link.edit'), [:edit, :apply]
 
-h3 입사지원서
+h3
+  = t('applies.show.application_form')
 
 - hrinfo = @this_user.hrinfo
 - contact = @this_user.hrinfo.contact
