--- a/app/views/applies/try.html.slim
+++ b/app/views/applies/try.html.slim
@@ -1,4 +1,5 @@
-h1 등록되지 않은 사용자입니다. 입사지원시스템으로 이동하시겠습니까?
+h1
+  = t('applies.try.unknown_user')
 = form_tag [:new, :apply], method: :get do
   = hidden_field_tag :provider, params[:provider]
   = hidden_field_tag :email, params[:email]
