--- a/app/views/bank_transfers/_detail.html.slim
+++ b/app/views/bank_transfers/_detail.html.slim
@@ -1,4 +1,5 @@
-h3 신용카드 이체내역 상세정보
+h3
+  = t('bank_transfers.detail.detail_card_transfer')
 table
   tr
     th= BankTransfer.human_attribute_name(:transfer_type)
