--- a/app/views/bank_transfers/excel.html.slim
+++ b/app/views/bank_transfers/excel.html.slim
@@ -11,4 +11,4 @@ h2 ..
       = label_tag :file, t('.file')
       = file_field :upload, :file
     p
-      = submit_tag "미리보기"
+      = submit_tag t('bank_transfers.excel.preview')
