--- a/app/views/cardbills/_detail.html.erb
+++ b/app/views/cardbills/_detail.html.erb
@@ -1,4 +1,4 @@
-<h3>카드영수증 상세정보</h3>
+<h3><%= t('Cardbills.detail.title')%></h3>
 <table border="0" cellspacing="5" cellpadding="5">
   <tr>
     <th align="right"><%= Cardbill.human_attribute_name('amount') %>:</th>
