--- a/app/views/cardbills/show.html.erb
+++ b/app/views/cardbills/show.html.erb
@@ -2,14 +2,14 @@
 
 <div id="show_command">
   <% if @cardbill.used %>
-    <%= link_to "사용 내역", @cardbill.used %>
+    <%= link_to t('cardbills.show.to_use'), @cardbill.used %>
     |
   <% end %>
   <% if @cardbill.status == 'verified' %>
     <% if @cardbill.expense_report %>
-      <%= link_to "지출내역서 보기", @cardbill.expense_report %>
+      <%= link_to t('cardbills.show.view_expense'), @cardbill.expense_report %>
     <% else %>
-      <%= link_to "지출내역서 만들기", new_expense_report_path(target_type: @cardbill.class, target_id: @cardbill.id, expensed_at: @cardbill.transdate, amount: @cardbill.totalamount) %>
+      <%= link_to t('cardbills.show.create_expense'), new_expense_report_path(target_type: @cardbill.class, target_id: @cardbill.id, expensed_at: @cardbill.transdate, amount: @cardbill.totalamount) %>
     <% end %>
     |
   <% end %>
