--- a/app/views/contacts/form/_others.html.slim
+++ b/app/views/contacts/form/_others.html.slim
@@ -1,17 +1,18 @@
 - 3.times { contact.others.new }
 
-h3 기타
+h3
+  = t('contacts_form.other.title')
 = contact_form.fields_for :others do |others_field|
   .other-form
     p
       = others_field.label :target
       = others_field.select :target, options_for_select(current_company.contact_other_tags.map{|tag| tag.name}, others_field.object.target)
       - if current_user.present? and current_user.admin?
-        = link_to "새로운 대상 만들기", [:new, :contact_other_tag]
+        = link_to t('contacts_form.make_new_one'), [:new, :contact_other_tag]
     p
       = others_field.label :description
       = others_field.text_field :description
-= link_to "새로운 기타정보 작성", "", class: 'new-other-form new-form-link'
+= link_to t('contacts_form.other.new'), "", class: 'new-other-form new-form-link'
 
 br
 br
