--- a/app/views/creditcards/preview.html.slim
+++ b/app/views/creditcards/preview.html.slim
@@ -16,6 +16,7 @@ h2= t(".title")
 
   br
 
-h3 프리뷰
+h3
+  = t('creditcards.preview.preview')
 - params[:card_type] = "card_approved_sources" if params[:card_type] == "card_approved_sources_oversea"
 = render "#{params[:card_type]}/list", params[:card_type].to_sym => @collection
