--- a/app/views/dayworkers/show.html.slim
+++ b/app/views/dayworkers/show.html.slim
@@ -11,6 +11,6 @@ ul
   li= Dayworker.human_attribute_name('juminno') + " : " + dayworker.juminno.to_s
 
 div#show_command
-  = link_to "주소록 찾기", find_contacts_path(target_class: dayworker.class, target: dayworker), :class => 'popup'
+  = link_to t('dayworkers.find_address'), find_contacts_path(target_class: dayworker.class, target: dayworker), :class => 'popup'
 h3= '...'
 = render 'contacts/item_for_hrinfo', contact: dayworker.contact, menu: false
