--- a/app/views/except_columns/_form.html.slim
+++ b/app/views/except_columns/_form.html.slim
@@ -10,10 +10,10 @@
         = check_box_tag "include_column[#{column}]", true, include_column?(column)
     p
       = select_tag :tag, options_for_select(except_column_keys, current_except_column_key), id: :except_columns_tag
-      = submit_tag "태그 만들기", id: :save_except_columns
+      = submit_tag t('except_columns.create_tag'), id: :save_except_columns
     p
-      = submit_tag "변경하기"
-      = link_to "돌아가기", :back, id: :back_from_except_columns
+      = submit_tag t('except_columns.modify')
+      = link_to t('except_columns.back'), :back, id: :back_from_except_columns
 
 javascript:
   var form = $('#except_columns_form'),
