--- a/app/views/postings/show.html.slim
+++ b/app/views/postings/show.html.slim
@@ -20,8 +20,10 @@ h2= t('.title')
       td
         table
           tr
-            th colspan=2 차변
-            th colspan=2 대변
+            th colspan=2
+              = t('postings.debits')
+            th colspan=2
+              = t('postings.credit')
           - items = Array.new([posting.items.debits.count, posting.items.credits.count].max)
           - items = items.zip(posting.items.debits, posting.items.credits)
           - items.each do |_, debit, credit|
