--- a/app/views/creditcards/edit.html.erb
+++ b/app/views/creditcards/edit.html.erb
@@ -37,7 +37,7 @@
   </p>
   <p>
     <%= f.label :bank_account_id %>
-    <%= f.select(:bank_account_id, options_for_select(BankAccount.all.map{|bank| [bank.name_with_number, bank.id]}, @creditcard.bank_account.id)) %>
+    <%= f.select(:bank_account_id, bank_account_select_list(@creditcard.bank_account.id)) %>
   </p>
   <p>
     <%= render 'shared/attachments/form', form: f %>
