--- a/app/views/bank_transfers/_form.html.slim
+++ b/app/views/bank_transfers/_form.html.slim
@@ -9,7 +9,7 @@ h2= t("common.title.#{form_type}")
   .box
     p
       = f.label :bank_account_id, BankAccount.human_attribute_name('name')
-      = select_tag(:bank_account_id, options_for_select(BankAccount.all.map{|bank| [bank.name, bank.id]}, bank_transfer.bank_account ? bank_transfer.bank_account.id : ""))
+      = select_tag :bank_account_id, bank_account_select_list(params[:bank_account_id])
     p
       = f.label :transfer_type
       = f.text_field :transfer_type
