--- a/app/views/hrinfos/index.html.erb
+++ b/app/views/hrinfos/index.html.erb
@@ -1,14 +1,8 @@
-<%
-if @retired == 'on'
-  title t('.title') + " (" + t(".retired") + ")"
-else
-  title t('.title') + " (" + t(".current") + ")"
-end
-%>
 <% content_for :search do -%>
   <%= form_tag({:action => "index"}, :method => :get ) do %>
     <%= hidden_field_tag 'retired', @retired %>
     <%= t("common.title.search") %> : <%= text_field_tag 'q', params[:q] %>
+    <%= select_tag :search_type, options_for_select(Hrinfo::SEARCH_TYPE, params[:search_type]), "onchange" => "this.form.submit()" %>
   <% end %>
 <% end -%>
 
@@ -17,7 +11,7 @@ end
   <%= link_to t('hrinfos.new.title'), new_hrinfo_path %>
 <% end %>
 </div>
-<h2>Total : <%= @hrinfos_count %></h2>
+<h2>Total : <%= @hrinfos.count %></h2>
 <table id="list-table">
   <tr>
     <th><%= Hrinfo.human_attribute_name('companyno') %></th>
@@ -44,19 +38,3 @@ end
   </tr>
 <% end %>
 </table>
-<% if @user.ingroup?("admin")%>
-  <div id="show_command">
-    <% if @retired == 'on' %>
-      <%= link_to t('.list_current'), :action => "index"%>
-    <% else %>
-      <%= link_to t('.list_retired'), :action => "index", :retired=>"on" %>
-    <% end %>
-     |
-    <% if params[:not_joined] == 'true' %>
-      <%= link_to t('.list_joined'), :action => "index"%>
-    <% else %>
-      <%= link_to t('.list_not_joined'), :action => "index", :not_joined => true %>
-    <% end %>
-
-  </div>
-<% end %>
