--- a/app/views/bank_transactions/_form.html.slim
+++ b/app/views/bank_transactions/_form.html.slim
@@ -3,8 +3,11 @@
 
 h2= t("common.title.#{action_name}")
 
-= form_for bank_transaction, html: {:class => "tabular"} do |f|
+- @bank_transaction ||= bank_transaction
+
+= form_for @bank_transaction, html: {:class => "tabular"} do |f|
   .box
+    = f.error_messages
     p
       = f.label :bank_account_id, BankAccount.human_attribute_name('name')
       = select_tag(:bank_account_id, options_for_select(BankAccount.all.map{|bank| [bank.name_with_number, bank.id]}, params[:bank_account_id]))
